src/objects/Order__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountId__c</fullName>
        <defaultValue>&quot;0015J000003j69kQAA&quot;</defaultValue>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <defaultValue>&quot;8005J000000271iQAA&quot;</defaultValue>
        <label>ContractId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
</CustomObject>